objects/EUR_CRM_Question__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_of_Survey_Answers__c</fullName>
        <label>Number of Survey Answers</label>
        <summaryForeignKey>EUR_CRM_Survey_Answer__c.EUR_CRM_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question_Statement__c</fullName>
        <label>Question Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question_Value_Type__c</fullName>
        <label>Answer Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes/No</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text Input</fullName>
                </value>
                <value>
                    <fullName>Currency Input</fullName>
                </value>
                <value>
                    <fullName>Number Input</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Start and End Date</fullName>
                </value>
                <value>
                    <fullName>Multipicklist</fullName>
                </value>
                <value>
                    <fullName>Picture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Question (EU)</label>
    <listViews>
        <fullName>All_BG_Question</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question_Value_Type__c</columns>
        <columns>EUR_CRM_Number_of_Survey_Answers__c</columns>
        <columns>EUR_CRM_Question_Statement__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Question__c.EUR_BG_Question</value>
        </filters>
        <label>All BG Question</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_DK_Questions</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question_Statement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Question__c.EUR_DK_Question</value>
        </filters>
        <label>All DK Questions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RU_Question</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question_Value_Type__c</columns>
        <columns>EUR_CRM_Number_of_Survey_Answers__c</columns>
        <columns>EUR_CRM_Question_Statement__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Question__c.EUR_RU_Question</value>
        </filters>
        <label>All RU Question</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>QSN-{000000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Question</fullName>
        <active>true</active>
        <label>EUR BE Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Question</fullName>
        <active>true</active>
        <label>EUR BG Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Question</fullName>
        <active>true</active>
        <label>DE Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Question</fullName>
        <active>true</active>
        <description>Record Type for DK Questions</description>
        <label>EUR DK Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Question</fullName>
        <active>true</active>
        <label>EUR FI Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Question</fullName>
        <active>true</active>
        <label>EUR RU Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Question</fullName>
        <active>true</active>
        <label>EUR ZA Question</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>